fixed a bunch of unchecked warnings and changed all new Integer to Integer.valueOf
git-svn-id: http://chianti.ucsd.edu/svn@14378 0ecc0d97-ab19-0410-9704-bfe1a75892f5