@@ -274,7 +274,7 @@ class ExportAsXGMMLTask implements Task {
 		final Object[] ret_val = new Object[3];
 		ret_val[0] = network;
 		ret_val[1] = new File(fileName).toURI();
-		ret_val[2] = new Integer(Cytoscape.FILE_XGMML);
+		ret_val[2] = Integer.valueOf(Cytoscape.FILE_XGMML);
 
 		Cytoscape.firePropertyChange(Cytoscape.NETWORK_SAVED, null, ret_val);
 	}
