@@ -343,7 +343,7 @@ class XGMMLParser extends DefaultHandler {
 			break;
 		case INTEGER:
 			if (value != null)
-				return new Integer(value);
+				return Integer.valueOf(value);
 			break;
 		case STRING:
 			if (value != null) {
@@ -403,7 +403,7 @@ class XGMMLParser extends DefaultHandler {
 		String attribute = atts.getValue(key);
 		if (attribute == null)
 			return 0;
-		return (new Integer(attribute)).intValue();
+		return (Integer.valueOf(attribute)).intValue();
 	}
 
 	/**
@@ -419,7 +419,7 @@ class XGMMLParser extends DefaultHandler {
 		String attribute = atts.getValue(ns, key);
 		if (attribute == null)
 			return 0;
-		return (new Integer(attribute)).intValue();
+		return (Integer.valueOf(attribute)).intValue();
 	}
 
 	/**
