@@ -55,7 +55,7 @@ class FNode implements Node {
 	public FNode(RootGraph root, int rootGraphIndex) {
 		this.m_rootGraph = root;
 		this.m_rootGraphIndex = rootGraphIndex;
-		this.m_identifier = new Integer(m_rootGraphIndex).toString();
+		this.m_identifier = Integer.valueOf(m_rootGraphIndex).toString();
 	}
 
 
